external-crates/move/crates/move-compiler/tests/move_2024/naming/lambda_shadows_function.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E02010]: invalid name
  ┌─ tests/move_2024/naming/lambda_shadows_function.move:4:22
  │
4 │     macro fun do<$T>(f: || -> $T): $T {
  │     -----            ^ Invalid parameter name 'f'. 'macro' parameter names must start with '$' (or must be '_')
  │     │                 
  │     Declared 'macro' here
  │
  = 'macro' parameters start with '$' to indicate that their arguments are not evaluated before the macro is expanded, meaning the entire expression is substituted. This is different from regular function parameters that are evaluated before the function is called.

error[E04029]: invalid function call
  ┌─ tests/move_2024/naming/lambda_shadows_function.move:5:9
  │
5 │         f()
  │         ^ Unexpected invocation of parameter or local 'f'. Non-syntax variables cannot be invoked as functions
  │
  = Only macro syntax variables, e.g. '$f', may be invoked as functions.
