external-crates/move/crates/move-compiler/tests/move_2024/naming/lambda_shadows_function.move
module a::m {
    fun f() {}
    // if we ever add non-$ var calls, we will need to fix this
    macro fun do<$T>(f: || -> $T): $T {
        f()
    }
}
